crates/weir-parser/src/snapshots/weir_parser__tests__error_bare_token.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1542
expression: result
---
ERRORS:
  0:5: expected '(' to start a top-level form
