crates/weir-parser/src/snapshots/weir_parser__tests__error_defn_no_params.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1554
expression: result
---
ERRORS:
  9:10: expected LParen, found Some(RParen)
