crates/weir-parser/src/snapshots/weir_parser__tests__error_empty_parens_in_expr.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1560
expression: result
---
ERRORS:
  14:16: empty parentheses

(defn main
  params:
  body:
)
