crates/weir-parser/src/snapshots/weir_parser__tests__error_incomplete_defn.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1548
expression: result
---
ERRORS:
  5:6: expected symbol, found Some(RParen)
