crates/weir-parser/src/snapshots/weir_parser__tests__error_invalid_character.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1596
expression: result
---
ERRORS:
  19:20: unexpected character

(defn main
  params:
  body:
    (+ 1 2)
)
