crates/weir-parser/src/snapshots/weir_parser__tests__error_multiple_errors.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1584
expression: result
---
ERRORS:
  5:6: expected symbol, found Some(RParen)
  12:13: expected symbol, found Some(RParen)
