crates/weir-parser/src/snapshots/weir_parser__tests__error_unclosed_nested.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1578
expression: result
---
ERRORS:
  1:3: expected top-level form (defn, deftype, ...), found Some(Symbol("if"))
