crates/weir-parser/src/snapshots/weir_parser__tests__error_unexpected_close_paren.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1536
expression: result
---
ERRORS:
  0:1: expected '(' to start a top-level form
