crates/weir-parser/src/snapshots/weir_parser__tests__error_unexpected_token_in_expr.snap
---
source: crates/weir-parser/src/lib.rs
assertion_line: 1590
expression: result
---
ERRORS:
  19:20: unexpected token Some(RBracket)
  21:22: expected RParen, found Some(Int(2))
  21:22: expected ')' to close top-level form
  23:24: expected '(' to start a top-level form

(defn main
  params:
  body:
)
